# -xingnix

./: README.md
data/: accel.txt
data/gear/: 0.5-2.txt  1.0-2.txt  1.5-2.txt  10-2.txt  2.0-2.txt  2.5-2.txt  3.0-2.txt  3.5-2.txt  4.0-2.txt  4.5-2.txt  5.0-2.txt  5.5-2.txt  6.0-2.txt  6.5-2.txt  7.0-2.txt  7.5-2.txt  8.0-2.txt  8.5-2.txt  9.0-2.txt  9.5-2.txt
src/: AccelAnalyse.cpp  CMakeLists.txt  EigenQuaternion.cpp  FeatureExtraction.cpp  GearAnalyse.cpp  ImageManipulate.cpp  PoseEstimation.cpp  Triangulate.cpp
